Pass List.of() calls to the SubscriptionExtractor constructor.